Fix invisible link in light mode

--- a/docs/src/styles/content.scss
+++ b/docs/src/styles/content.scss
@@ -12,4 +12,8 @@
         background: linear-gradient(180deg, #252525 0%, #111111 50%);
         border-top: 2px solid gray;
     }
+
+    a {
+        color: white !important;
+    }
 }
